# AI-Research-Assistent

./: README.md  main.py  pyproject.toml  testing.py
app/Agents/: agent.py  agentManager.py  agentTools.py  agent_utils.py  ragChain.py  tools.py  utilityFunctions.py
app/Config/: fileUploadConfig.py
app/Models/: DTO.py  chatModel.py  userModel.py
app/Router/: Auth.py  FileUpload.py  agentRouter.py  authRouter.py  chatRouter.py
app/Service/: Auth.py  chatService.py
app/Utils/: dbUtlis.py  fileUtils.py  jwtUtils.py  passwordUtils.py  textUtils.py
