[project]
name = "ai-document-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.2.1",
    "fastapi>=0.120.2",
    "langchain>=1.0.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
