[project]
name = "ai-document-summarizer"
version = "0.1.0"
description = "AI-powered document summarization API with Gemini and CrewAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework --------------
    "fastapi>=0.120.2",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    # DB -------------------------
    "motor>=3.7.1",
    # Authentication -------------
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "httpx>=0.27.0",
    # AI/ML ----------------------
    "crewai>=1.2.1",
    "langchain>=0.1.0",
    # Document Processing --------
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    # Utilities ------------------
    "pydantic[email]>=2.11.9",
    "python-dotenv>=1.2.1",
    "authlib>=1.6.5",
    "itsdangerous>=2.2.0",
]
