[project]
name = "ai-document-summarizer"
version = "0.1.0"
description = "AI-powered document summarization API with Gemini and CrewAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework --------------
    "fastapi>=0.120.2",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    # DB -------------------------
    "motor>=3.7.1",
    # Authentication -------------
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "httpx>=0.27.0",
    "langchain-google-genai>=3.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "sentence-transformers>=5.1.2",
    # Document Processing --------
    "pypdf>=3.17.0",
    "docx2txt>=0.9",
    # Utilities ------------------
    "pydantic[email]>=2.11.9",
    "python-dotenv>=1.2.1",
    "authlib>=1.6.5",
    "itsdangerous>=2.2.0",
    "chromadb>=1.3.3",
    "langchain-chroma>=1.0.0",
    "crewai>=0.193.2",
]
